--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,1 @@
-<p>home works!</p>
-<p style="padding: 15px;"> This is the about page that describes your app</p>
+<img src="C:/Users/Hou Yuan/Downloads/clipart4659761.png" class="img1"/>
