--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -49,3 +49,12 @@
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+
+  .specification{
+    position: relative;
+    left: 30px;
+}
+.answer{
+    position: relative;
+    left: 30px;
+}
