--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -3,8 +3,7 @@
 </div>
 
 
-
-<h4>mat select</h4>
+<div class="specification">
 <mat-form-field appearance="fill">
   <mat-label>Favorite animal</mat-label>
   <mat-select [formControl]="animalControl" required>
@@ -16,3 +15,19 @@
   <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
   <mat-hint>{{animalControl.value?.sound}}</mat-hint>
 </mat-form-field>
+</div>
+
+<div class="answer">
+<mat-form-field appearance="fill">
+    <mat-label>Favorite animal</mat-label>
+    <mat-select [formControl]="animalControl" required>
+      <mat-option>--</mat-option>
+      <mat-option *ngFor="let animal of animals" [value]="animal">
+        {{animal.name}}
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
+    <mat-hint>{{animalControl.value?.sound}}</mat-hint>
+  </mat-form-field>
+</div>
+
