--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -3,31 +3,34 @@
 </div>
 
 
-<div class="specification">
+<div class="options">
+  <p> </p>
+  <p>Profile</p>
 <mat-form-field appearance="fill">
-  <mat-label>Favorite animal</mat-label>
+  <mat-label>Choose a profile</mat-label>
   <mat-select [formControl]="animalControl" required>
     <mat-option>--</mat-option>
     <mat-option *ngFor="let animal of animals" [value]="animal">
       {{animal.name}}
     </mat-option>
   </mat-select>
-  <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
+  <mat-error *ngIf="animalControl.hasError('required')">Please choose a profile</mat-error>
   <mat-hint>{{animalControl.value?.sound}}</mat-hint>
 </mat-form-field>
 </div>
 
 <div class="answer">
+  <p> </p>
+  <p>Category</p>
 <mat-form-field appearance="fill">
-    <mat-label>Favorite animal</mat-label>
+    <mat-label>Choose category of inserts</mat-label>
     <mat-select [formControl]="animalControl" required>
       <mat-option>--</mat-option>
       <mat-option *ngFor="let animal of animals" [value]="animal">
         {{animal.name}}
       </mat-option>
     </mat-select>
-    <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
+    <mat-error *ngIf="animalControl.hasError('required')">Please choose something</mat-error>
     <mat-hint>{{animalControl.value?.sound}}</mat-hint>
   </mat-form-field>
 </div>
-
