--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<img src="C:/Users/Hou Yuan/Downloads/clipart4659761.png" class="img1"/>
+<img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" class="img1"/>
+
+<div class = "update-configure-docs-button">
+<button mat-raised-button color="primary">Update database</button>
+<button mat-raised-button color="primary">Configure documents</button>
+</div>
