--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -1,8 +1,9 @@
+/* for the dragging tiles of the PDU modules */
 .example-list {
-    width: 1000px;
+    width: 100%;
     max-width: 100%;
     border: solid 1px #ccc;
-    min-height: 60px;
+    height: 100px;
     display: flex;
     flex-direction: row;
     background: white;
@@ -12,7 +13,7 @@
   
   .example-box {
     padding: 20px 10px;
-    border-right: solid 1px #ccc;
+    border-right: solid 1px #ccc;;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -20,7 +21,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    background: rgb(255, 255, 255);
     font-size: 14px;
     flex-grow: 1;
     flex-basis: 0;
@@ -50,7 +51,9 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
-  .specification{
+
+  /* stuff for drop down menus of choosing a specification */
+  .options{
     position: relative;
     left: 30px;
 }
