--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,11 @@
 img{
- height: 75%;
- width: 75%;
+ height: 500px;
+ width: 700px;
+ position: relative;
+ margin-left: 50mm;
+}
+
+.update-configure-docs-button{
+    position: relative;
+    margin-left: 250mm;
 }
