--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" class="img1"/>
+<img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" class="img1">
 
 <div class = "update-configure-docs-button">
 <button mat-raised-button color="primary">Update database</button>
