--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,36 +1,50 @@
+<!-- PDU design with sliding inserts -->
 <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let content of contents" cdkDrag>{{content}}</div>
+    <div class="example-box" *ngFor="let content of contents" cdkDrag>
+      <img [src]="content" alt="your image" />
+    </div>
 </div>
 
+<div class="selects">
+  <!-- choose inserts -->
+  <div class="inserts">
+    <button mat-button >insert 1</button>
+    <button mat-button >insert 2</button>
+    <button mat-button >insert 3</button>
+    <button mat-button >insert 4</button>
+    <button mat-button >insert 5</button>
+    <button mat-button >insert 6</button>
+  </div>
+  
+  <!-- Drop down menu for Profiles -->
+  <div class="Profiles">
+    <p> </p>
+    <p>Profile</p>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a profile</mat-label>
+      <mat-select [formControl]="animalControl" required>
+        <mat-option>--</mat-option>
+        <mat-option *ngFor="let animal of animals" [value]="animal">
+          {{animal.name}}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="animalControl.hasError('required')">Please choose a profile</mat-error>
+    </mat-form-field>
+  </div>
 
-<div class="options">
-  <p> </p>
-  <p>Profile</p>
-<mat-form-field appearance="fill">
-  <mat-label>Choose a profile</mat-label>
-  <mat-select [formControl]="animalControl" required>
-    <mat-option>--</mat-option>
-    <mat-option *ngFor="let animal of animals" [value]="animal">
-      {{animal.name}}
-    </mat-option>
-  </mat-select>
-  <mat-error *ngIf="animalControl.hasError('required')">Please choose a profile</mat-error>
-  <mat-hint>{{animalControl.value?.sound}}</mat-hint>
-</mat-form-field>
-</div>
-
-<div class="answer">
-  <p> </p>
-  <p>Category</p>
-<mat-form-field appearance="fill">
-    <mat-label>Choose category of inserts</mat-label>
-    <mat-select [formControl]="animalControl" required>
-      <mat-option>--</mat-option>
-      <mat-option *ngFor="let animal of animals" [value]="animal">
-        {{animal.name}}
-      </mat-option>
-    </mat-select>
-    <mat-error *ngIf="animalControl.hasError('required')">Please choose something</mat-error>
-    <mat-hint>{{animalControl.value?.sound}}</mat-hint>
-  </mat-form-field>
+  <!-- Drop down menu for Category -->
+  <div class="Categories">
+    <p> </p>
+    <p>Category</p>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose category of inserts</mat-label>
+      <mat-select [formControl]="animalControl" required>
+        <mat-option>--</mat-option>
+        <mat-option *ngFor="let animal of animals" [value]="animal">
+          {{animal.name}}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="animalControl.hasError('required')">Please choose something</mat-error>
+    </mat-form-field>
+  </div>
 </div>
