--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -1,7 +1,23 @@
 /* selecting part of the screen */
+.row-everything{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
 .selects{
-  align-content: left;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 100px;
+  justify-content: left;
+}
+
+.inserts-section{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 110px
 }
 
 .inserts{
@@ -10,8 +26,9 @@
   align-content: center;
 }
 button{
-  width: 300px;
-  height: 10;
+  display: flex;
+  width: 120px;
+  height: 120px;
 }
   /* stuff for drop down menus of choosing a specification */
 .Profiles{
