--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 
 <div class="home-content">
     <img src="/images/placeholder-image.png" class="logo-image">
+    <!-- <img src="/images/Insert real/032-8666 10 amp small.jpg" class="logo-image"> -->
 
     <div class = "update-configure-docs-button">
     <button mat-raised-button color="primary">Update database</button>
