--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,10 +1,14 @@
 <div class="row-everything">
+
+
 <!-- PDU design with sliding inserts -->
 <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
     <div class="example-box" *ngFor="let content of contents" cdkDrag>
-      <img [src]="content" alt="your image" />
+      <img [src]="content" alt="your image"/>
     </div>
 </div>
+
+
 
 <div class="selects">
   <div class="profiles-categories">
@@ -14,13 +18,13 @@
       <p>Profile</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose a profile</mat-label>
-        <mat-select [formControl]="animalControl" required>
+        <mat-select [formControl]="profileNonEmptyControl" required>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let animal of animals" [value]="animal">
-            {{animal.name}}
+          <mat-option *ngFor="let profile of profiles" [value]="profile">
+            {{profile.name}}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="animalControl.hasError('required')">Please choose a profile</mat-error>
+        <mat-error *ngIf="profileNonEmptyControl.hasError('required')">Please choose a profile</mat-error>
       </mat-form-field>
     </div>
 
@@ -30,13 +34,13 @@
       <p>Category</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose category of inserts</mat-label>
-        <mat-select [formControl]="animalControl" required>
+        <mat-select [formControl]="categoryNonEmptyControl" required>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let animal of animals" [value]="animal">
-            {{animal.name}}
+          <mat-option *ngFor="let category of categories" [value]="category">
+            {{category.name}}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="animalControl.hasError('required')">Please choose something</mat-error>
+        <mat-error *ngIf="categoryNonEmptyControl.hasError('required')">Please choose something</mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -44,7 +48,7 @@
   <!-- choose inserts -->
   <div class="inserts-section">
     <div class="inserts">
-      <button mat-raised-button >insert 1</button>
+      <button mat-raised-button >Insert 1</button>
       <button mat-raised-button >insert 2</button>
       <button mat-raised-button >insert 3</button>
       <button mat-raised-button >insert 4</button>
@@ -52,8 +56,12 @@
       <button mat-raised-button >insert 6</button>
     </div>
     <div class="inserts-names">
-      <button mat-raised-button >insert 1</button>
-      <button mat-raised-button >insert 2</button>
+      <button mat-raised-button >
+        <img src="/images/Insert real/CEM tek.jpg" alt="your image"/>
+      </button>
+      <button mat-raised-button >
+        <img src="/images/Insert real/22-8673 small.jpg" alt="your image"/>
+      </button>
       <button mat-raised-button >insert 3</button>
       <button mat-raised-button >insert 4</button>
       <button mat-raised-button >insert 5</button>
@@ -68,13 +76,13 @@
       <p>Option</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose an option</mat-label>
-        <mat-select [formControl]="animalControl" required>
+        <mat-select [formControl]="qControls" required>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let animal of animals" [value]="animal">
-            {{animal.name}}
+          <mat-option *ngFor="let question of questions" [value]="question">
+            {{question.name}}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="animalControl.hasError('required')">Please choose a profile</mat-error>
+        <mat-error *ngIf="qControls.hasError('required')">Please choose a profile</mat-error>
       </mat-form-field>
     </div>
 
