--- a/src/app/edit-material/edit-material.component.html
+++ b/src/app/edit-material/edit-material.component.html
@@ -1,1 +1,66 @@
-<p>edit-material works!</p>
+<h1 class="title-new">Edit Material</h1>
+
+<div class="content"> 
+
+    <div class="section-input-process-time">
+        <p>Search process time</p>
+
+            <mat-form-field appearance="fill">
+                <input class="input-process" matInput placeholder="Zoek proces tijd">
+            </mat-form-field>
+
+            <div class="inputs-processes">
+
+            <mat-form-field appearance="fill">
+                <input class="input-process" matInput placeholder="Proces tijd bewerken">
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <input class="input-process-pricing" matInput placeholder="bewerk prijs">
+            </mat-form-field>
+        </div>
+    </div>
+
+
+    <div class="section-profile">
+
+        <p>Search profile</p>
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Zoek naam of referentie nummer">
+        </mat-form-field>
+
+        <mat-card>
+            <mat-card-title>ProfileName</mat-card-title>
+            <mat-card-subtitle>ReferenceNumber <br>
+                price per meter
+            </mat-card-subtitle>
+            <mat-card-actions>
+                <button mat-button>Delete</button>
+            </mat-card-actions>
+        </mat-card>
+
+    </div>
+
+    <div class="section-material">
+        <p>Search material</p>
+
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Zoek naam of referentie nummer">
+        </mat-form-field>
+
+        <mat-card>
+            <mat-card-title>MaterialName</mat-card-title>
+            <mat-card-subtitle>ReferenceNumber <br>
+                price per unit
+            </mat-card-subtitle>
+            <mat-card-actions>
+                <button mat-button>Delete</button>
+            </mat-card-actions>
+        </mat-card>
+
+    </div>
+
+</div>
+
+<button class="button-save" mat-raised-button>Opslaan </button>
+
