--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,15 @@
+<p>my name is {{myusername}}</p>
+
+<p><input type="text" (keydown)="blurEvent($event)">
+
+</p>
+
+<mat-form-field appearance="fill">
+    <input matInput placeholder="Search category name" (keydown)="onKeyDown($event)">
+</mat-form-field>
+<p>{{key}}</p>
+
+
 <!-- <img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" class="img1"> -->
 
 
