--- a/src/app/design/design.component.css
+++ b/src/app/design/design.component.css
@@ -17,25 +17,66 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 110px
 }
 
-.inserts{
-  width: 20px;
-  flex-direction: column-reverse;
-  align-content: center;
-}
-.inserts-names {
-  width: 200px;
-  flex-direction: column-reverse;
-  align-content: center;
+
+.inserts-images {
+  height: 60px;
 }
 
-button{
+.group-button-insertImages{
   display: flex;
-  width: 120px;
-  height: 120px;
+  flex-direction: column;
+  gap: 10px;
 }
+
+.buttons-images {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+}
+
+p{
+  font-family: sans-serif;
+}
+
+/* 
+.inserts-names {
+  display: flex;
+  height: 60px;
+  flex-direction: column;
+  align-content: center;
+}
+.inserts-images {
+  height: 60px;
+  width: auto;
+}
+
+.group-button-insertImages{
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+}
+.group-buttons-insertNames {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  width: auto;
+}
+
+.buttons-images {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  width: 500px;
+}
+.buttons-inserts-names {
+  height: 60px;
+  width: auto;
+} */
+
   /* stuff for drop down menus of choosing a specification */
 .Profiles{
   position: relative;
