--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,36 +1,35 @@
 <div class="row-everything">
 
-
 <!-- PDU design with sliding inserts -->
 <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
     <div class="example-box" *ngFor="let content of contents" cdkDrag>
-      <img [src]="content" alt="your image"/>
+      <img [src]="folder+content" alt="your image"/>
     </div>
 </div>
-
-
 
 <div class="selects">
   <div class="profiles-categories">
     <!-- Drop down menu for Profiles -->
     <div class="Profiles">
-      <p> </p>
       <p>Profile</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose a profile</mat-label>
-        <mat-select [formControl]="profileNonEmptyControl" required>
-          <mat-option>--</mat-option>
+        <mat-select [formControl]="profileNonEmptyControl" required (selectionChange)="selectProfile()">
+          <mat-option>None</mat-option>
           <mat-option *ngFor="let profile of profiles" [value]="profile">
-            {{profile.name}}
+          {{profile.name}}
           </mat-option>
+        <!-- </mat-select> -->
+
         </mat-select>
         <mat-error *ngIf="profileNonEmptyControl.hasError('required')">Please choose a profile</mat-error>
       </mat-form-field>
     </div>
 
+    <p>{{chosenProfile.name}}</p>
+
     <!-- Drop down menu for Category -->
     <div class="Categories">
-      <p> </p>
       <p>Category</p>
       <mat-form-field appearance="fill">
         <mat-label>Choose category of inserts</mat-label>
@@ -46,26 +45,15 @@
   </div>
 
   <!-- choose inserts -->
-  <div class="inserts-section">
-    <div class="inserts">
-      <button mat-raised-button >Insert 1</button>
-      <button mat-raised-button >insert 2</button>
-      <button mat-raised-button >insert 3</button>
-      <button mat-raised-button >insert 4</button>
-      <button mat-raised-button >insert 5</button>
-      <button mat-raised-button >insert 6</button>
-    </div>
-    <div class="inserts-names">
-      <button mat-raised-button >
-        <img src="/images/Insert real/CEM tek.jpg" alt="your image"/>
+  <div class="inserts-section">    
+    <!-- <div class="group-buttons-insertNames">
+      <button class="buttons-inserts-names" *ngFor="let content of contents" mat-raised-button>{{content}}</button>
+    </div> -->
+    <div class="group-button-insertImages">
+      <button class="buttons-images" *ngFor="let sample of samples" mat-raised-button (click)="clickAddInsert(sample)">
+        <img class="inserts-images" src={{folder}}{{sample}} alt="your image"/>
+        <p>{{sample}}</p>
       </button>
-      <button mat-raised-button >
-        <img src="/images/Insert real/22-8673 small.jpg" alt="your image"/>
-      </button>
-      <button mat-raised-button >insert 3</button>
-      <button mat-raised-button >insert 4</button>
-      <button mat-raised-button >insert 5</button>
-      <button mat-raised-button >insert 6</button>
     </div>
   </div>
 
@@ -101,9 +89,11 @@
         <mat-error *ngIf="animalControl.hasError('required')">Please choose something</mat-error>
       </mat-form-field>
     </div>
-  </div>
-  <div class="block1"></div>
-  <div class="block1"></div>
 
+    <button mat-raised-button (click)="clickSave()">Save</button>
+
+  </div>
+
+  <p>{{yes}}</p>
 </div>
 </div>
