added http stuffs that works

--- a/src/app/greeter/greeter.component.html
+++ b/src/app/greeter/greeter.component.html
@@ -1,1 +1,3 @@
-<p>{{response}}</p>
+<input type="button" name="postBtn" style="width:250px" (click)="PostData()" value="Press button to POST something!">
+<p>got names: [{{retPostData[0].name}}] and [{{retPostData[2].name}}]</p>
+
