--- a/src/app/new-insert/new-insert.component.html
+++ b/src/app/new-insert/new-insert.component.html
@@ -8,8 +8,9 @@
             <input matInput placeholder="Give insert name">
         </mat-form-field>
 
-        <form class="select-category">
-            <mat-form-field class="example-full-width" appearance="fill">
+        <p>Add insert to a category</p>
+        <form>
+            <mat-form-field appearance="fill">
             <mat-label>Number</mat-label>
             <input type="text"
                     placeholder="Category"
@@ -40,8 +41,8 @@
             <p>Add process time</p>
 
             <div class="row-processtimes">
-                <form class="example-form">
-                    <mat-form-field class="example-full-width" appearance="fill">
+                <form>
+                    <mat-form-field appearance="fill">
                     <mat-label>Number</mat-label>
                     <input type="text"
                             class="input-menu-process-time"
@@ -74,7 +75,7 @@
 
         <div class="row-component-conf">
             <form>
-                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-form-field appearance="fill">
                 <mat-label>Number</mat-label>
                 <input type="text"
                         class="input-component"
