--- a/src/app/greeter/greeter.component.html
+++ b/src/app/greeter/greeter.component.html
@@ -1,3 +1,2 @@
-<input type="button" name="postBtn" style="width:250px" (click)="PostData()" value="Press button to POST something!">
-<p>got names: [{{retPostData[0].name}}] and [{{retPostData[2].name}}]</p>
-
+<input type="button" name="postBtn" style="width:250px" (click)="PostData()" value="My name is PDU Builder">
+<p *ngFor="let data of retGetData"> prices of the stuff {{data.insert_name}} and {{data.category}}</p>
